--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.16.2",
+    "bcrypt": "^5.1.1",
     "express": "^4.19.2",
     "nodemon": "^3.1.4"
   },
